# presentation_vulkan_decembre_2024

./: README.md
presentation/: .env  listings-glsl.prf  main.sdf  presentation.tex
presentation/assets/: custom.css
presentation/images/: Vulkan-Diagram.avif
presentation/plugins/highlightjs/: DIGESTS.md  highlight.js  highlight.min.js  plugin.json
sources/mandelbrot_example/: CMakeLists.txt  Readme.md
sources/mandelbrot_example/shaders/: shader.comp
sources/mandelbrot_example/src/: ansi.hpp  application.cpp  debug_utils.cpp  debug_utils.hpp  saving_png.cpp  vk_computing.cpp  vk_computing.hpp
sources/produit_matrice_matrice/benchmark_cpp/: Makefile  Matrix.hpp  ProdMatMat.cpp  TestProductMatrix.cpp  test_product_matrice_blas.cpp
sources/produit_matrice_matrice/kompute_prod_mat_mat/: CMakeLists.txt
sources/produit_matrice_matrice/kompute_prod_mat_mat/shader/: mulmatmat.comp
sources/produit_matrice_matrice/kompute_prod_mat_mat/src/: main.cpp
